subtitles: support MicroDVD color extension

Ref #1825